<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <com.google.android.youtube.player.YouTubePlayerView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/AP_player_title"
        android:text="@string/AP_video_title_TEXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="4"
        android:typeface="normal"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/AP_player_id"
        android:text="@string/AP_video_id_TEXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/AP_player_description"
        android:text="@string/AP_video_description_TEXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="15"
        android:layout_margin="10dp" />


</LinearLayout>
